<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:animateLayoutChanges="true">

	<View
			android:id="@+id/id_v_banner"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:background="?colorPrimary"
			android:tag="banner" />

	<androidx.cardview.widget.CardView
			android:id="@+id/id_cv_toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<TextView
				android:id="@+id/id_tv_total_shown"
				style="@style/TextAppearance.AppCompat.Medium"
				android:layout_width="wrap_content"
				android:layout_height="?actionBarSize"
				android:layout_marginHorizontal="@dimen/margin_half"
				android:gravity="center"
				android:textStyle="bold" />

		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="?actionBarSize"
				android:layout_gravity="end"
				android:layout_marginHorizontal="@dimen/margin_half"
				android:gravity="center_vertical"
				android:orientation="horizontal">

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/label_encountered" />

			<com.google.android.material.switchmaterial.SwitchMaterial
					android:id="@+id/id_sw_sort"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/label_alphabetical" />
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="?actionBarSize"
				android:orientation="horizontal"
				android:weightSum="100">

			<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/id_et_filter"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/margin_half"
					android:layout_weight="90"
					android:hint="@string/label_filter" />

			<androidx.appcompat.widget.AppCompatButton
					android:id="@+id/id_b_clear"
					style="@style/Widget.AppCompat.Button.Borderless.Colored"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="@dimen/margin_half"
					android:layout_weight="10"
					android:minWidth="0dp"
					android:padding="0dp"
					android:text="@string/label_clear" />
		</LinearLayout>
	</androidx.cardview.widget.CardView>

	<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/id_rv_pokemon"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/id_cv_toolbar"
			android:layout_marginHorizontal="@dimen/margin_half" />

</RelativeLayout>
