<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<com.google.android.material.card.MaterialCardView
			android:id="@+id/id_cv_flavor"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/margin_half"
			android:backgroundTint="@color/md_theme_surfaceContainerHigh_mediumContrast"
			app:contentPadding="@dimen/margin_half">

		<TextView
				style="@style/TextAppearance.Material3.TitleMedium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_description" />

		<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/layout_divider"
				android:layout_marginTop="26dp"
				android:background="@color/md_theme_secondaryFixed_mediumContrast" />

		<TextView
				android:id="@+id/id_tv_flavor"
				style="@style/TextAppearance.Material3.BodyMedium"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp" />

	</com.google.android.material.card.MaterialCardView>


	<com.google.android.material.card.MaterialCardView
			android:id="@+id/id_cv_strength"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/id_cv_flavor"
			android:layout_margin="@dimen/margin_half"
			android:backgroundTint="@color/md_theme_surfaceContainerHigh_mediumContrast"
			app:contentPadding="@dimen/margin_half">

		<TextView
				style="@style/TextAppearance.Material3.TitleMedium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/label_strength" />

		<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/layout_divider"
				android:layout_marginTop="26dp"
				android:background="@color/md_theme_secondaryFixed_mediumContrast" />

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:animateLayoutChanges="true"
				android:baselineAligned="false"
				android:orientation="horizontal"
				android:weightSum="3">

			<LinearLayout
					android:id="@+id/id_ll_strength_major"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="30dp"
					android:layout_weight="1"
					android:orientation="vertical" />

			<LinearLayout
					android:id="@+id/id_ll_defense_major"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="30dp"
					android:layout_weight="1"
					android:orientation="vertical" />

			<LinearLayout
					android:id="@+id/id_ll_defense_minor"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="30dp"
					android:layout_weight="1"
					android:orientation="vertical" />

		</LinearLayout>

	</com.google.android.material.card.MaterialCardView>


	<com.google.android.material.card.MaterialCardView
			android:id="@+id/id_cv_weakness"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/id_cv_strength"
			android:layout_margin="@dimen/margin_half"
			android:backgroundTint="@color/md_theme_surfaceContainerHigh_mediumContrast"
			app:contentPadding="@dimen/margin_half">

		<TextView
				style="@style/TextAppearance.Material3.TitleMedium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/label_weakness" />

		<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/layout_divider"
				android:layout_marginTop="26dp"
				android:background="@color/md_theme_secondaryFixed_mediumContrast" />

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:animateLayoutChanges="true"
				android:baselineAligned="false"
				android:orientation="horizontal"
				android:weightSum="3">

			<LinearLayout
					android:id="@+id/id_ll_damage_minor"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="30dp"
					android:layout_weight="1"
					android:orientation="vertical" />

			<LinearLayout
					android:id="@+id/id_ll_damage_none"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="30dp"
					android:layout_weight="1"
					android:orientation="vertical" />

			<LinearLayout
					android:id="@+id/id_ll_weakness_major"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="30dp"
					android:layout_weight="1"
					android:orientation="vertical" />

		</LinearLayout>

	</com.google.android.material.card.MaterialCardView>

	<com.google.android.material.card.MaterialCardView
			android:id="@+id/id_cv_evolutions"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/id_cv_weakness"
			android:layout_margin="@dimen/margin_half"
			android:backgroundTint="@color/md_theme_surfaceContainerHigh_mediumContrast"
			app:contentPadding="@dimen/margin_half">

		<TextView
				style="@style/TextAppearance.Material3.TitleMedium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_evolutions" />

		<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/layout_divider"
				android:layout_marginTop="26dp"
				android:background="@color/md_theme_secondaryFixed_mediumContrast" />

		<HorizontalScrollView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="26dp"
				android:fadingEdgeLength="@dimen/icon_small"
				android:foregroundGravity="center"
				android:requiresFadingEdge="horizontal">

			<LinearLayout
					android:id="@+id/id_ll_evolutions"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:padding="@dimen/margin_half" />
		</HorizontalScrollView>

	</com.google.android.material.card.MaterialCardView>

</RelativeLayout>